# tg_habtis_bot_v3

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  useful_commands.md
docs/: analytics.md  backlog.md  habits_diary_telegram_bot_project_description.md  technical_description.md  telethon_testing.md
openspec/: project.md
openspec/changes/add-admin-period-stats/: design.md  proposal.md  tasks.md
openspec/changes/add-admin-role/: proposal.md  tasks.md
openspec/changes/add-daily-reminders/: design.md  proposal.md  tasks.md
openspec/changes/add-error-feedback/: proposal.md  tasks.md
openspec/changes/add-habit-default-values/: proposal.md  tasks.md
scripts/: deploy_cloud_run.sh  generate_tg_session.py  setup_webhook.py
src/: __init__.py  main.py
src/config/: constants.py  settings.py
src/core/: analytics.py  dependencies.py  exceptions.py  logging.py  rate_limit.py
src/llm/: client.py
src/models/: entry.py  enums.py  feedback.py  habit.py  session.py  usage_event.py  user.py
src/secrets/: manager.py
src/services/: on_this_day.py
src/transcription/: whisper.py
src/utils/: date_parser.py  formatters.py  validators.py
tests/: test_admin_handler.py  test_config_handler.py  test_habit_list_type.py  test_habits_retry.py  test_on_this_day.py  test_rate_limit.py  test_reminders.py  test_router_sheet_detection.py  test_sheets_security.py  test_smart_nudges.py  test_telegram_confirm_handlers.py
tests/integration/: __init__.py  conftest.py  telethon_helpers.py  test_telethon_bot.py
(+103 files in other folders)
