
[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "habits-diary-bot"
version = "0.1.0"
description = "Telegram bot for habits, diary, and reflections"
authors = [{name = "Igor"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104",
    "uvicorn[standard]>=0.23",
    "python-telegram-bot>=20.6",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.8",
    "openai>=1.3",
    "httpx>=0.25",
    "tenacity>=8.2",
    "structlog>=23.2",
    "google-cloud-firestore>=2.12",
    "google-cloud-secret-manager>=2.16",
    "google-api-python-client>=2.100",
    "google-auth>=2.23",
    "google-auth-oauthlib>=1.1",
    "gspread>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "httpx>=0.25",
    "ruff>=0.1.8",
    "mypy>=1.7",
    "telethon>=1.34",
]

[tool.ruff]
line-length = 100
